[package]
name = "whalesearch"
version = "0.1.0"
edition = "2018"

[build-dependencies]
lalrpop = { version = "0.19.1", features = ["lexer"] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lalrpop-util = "0.19.1"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "ast_vs_vm"
harness = false
